Update and rename main.yml to greatersydscraper.yml
Testing Branch push on main to validate program

--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -1,8 +1,9 @@
 name: damlevel_scrape.r
 # Controls when the action will run.
 on:
-  schedule:
-    - cron:  '0 0 * * *'
+ push:
+    branches: main 
+ 
 jobs: 
   autoscrape:
     # The type of runner that the job will run on
