--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         git config --local user.name actions-user
         git config --local user.email "actions@github.com"
-        git add data/*
+        git add Greater_Sydney_Dam_Levels/data/*
         git commit -am "GH ACTION Headlines $(date)"
         git push origin main
       env:
