--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -1,8 +1,8 @@
 name: damlevel_scrape.r
 # Controls when the action will run.
 on:
- push:
-    branches: main 
+  schedule:
+    - cron:  '*/5 * * * *'
  
 jobs: 
   autoscrape:
