--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -7,16 +7,18 @@ on:
 jobs: 
   autoscrape:
     # The type of runner that the job will run on
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     # Load repo and install R
     steps:
     - uses: actions/checkout@master
     - uses: r-lib/actions/setup-r@v2
     # Set-up R
     - name: Install packages
-      run: |
-        R -e 'install.packages("dplyr")'
-        R -e 'install.packages("rvest")'
+      uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages: |
+            any::dplyr
+            any::rvest          
     # Run R script
     - name: Dam level scraper
       working-directory: Greater_Sydney_Dam_Levels
