--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -4,34 +4,35 @@ on:
   schedule:
     - cron:  '0 07 * * *'
  
-jobs: 
-  autoscrape:
-    # The type of runner that the job will run on
+jobs:
+  import-data:
     runs-on: ubuntu-latest
-    # Load repo and install R
     steps:
-    - uses: actions/checkout@master
-    - uses: r-lib/actions/setup-r@v2
-    # Set-up R
-    - name: Install packages
-      uses: r-lib/actions/setup-r-dependencies@v2
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+
+      - name: Install packages
+        uses: r-lib/actions/setup-r-dependencies@v2
         with:
           packages: |
             any::dplyr
             any::rvest          
-    # Run R script
-    - name: Dam level scraper
-      working-directory: Greater_Sydney_Dam_Levels
-      run: Rscript damlevel_scrape.R
+
+      - name: Check out repository
+        uses: actions/checkout@v3
+        
+      - name: Dam level scraper
+        working-directory: Greater_Sydney_Dam_Levels
+        run: Rscript damlevel_scrape.R
       
  # Add new files in data folder, commit along with other modified files, push
-    - name: Commit files
-      run: |
-        git config --local user.name actions-user
-        git config --local user.email "actions@github.com"
-        git add Greater_Sydney_Dam_Levels/*
-        git commit -am "GH ACTION Headlines $(date)"
-        git push origin main
-      env:
-        REPO_KEY: ${{secrets.GITHUB_TOKEN}}
-        username: github-actions
+      - name: Commit files
+        run: |
+          git config --local user.name actions-user
+          git config --local user.email "actions@github.com"
+          git add Greater_Sydney_Dam_Levels/*
+          git commit -am "GH ACTION Headlines $(date)"
+          git push origin main
+        env:
+          REPO_KEY: ${{secrets.GITHUB_TOKEN}}
+          username: github-actions
