--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -1,8 +1,8 @@
 name: damlevel_scrape.r
 # Controls when the action will run.
 on:
-  schedule:
-    - cron:  '0 07 * * *'
+  push:
+    branches: main
  
 jobs:
   import-data:
