--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -23,7 +23,7 @@ jobs:
         
       - name: Dam level scraper
         working-directory: Greater_Sydney_Dam_Levels
-        run: Rscript damlevel_scrape.R
+        run: Rscript Greater_Sydney_Dam_Levels/damlevel_scrape.R
       
  # Add new files in data folder, commit along with other modified files, push
       - name: Commit files
