--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -22,15 +22,15 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Dam level scraper
-        working-directory: Greater_Sydney_Dam_Levels
+        working-directory: Greater_Sydney_Dam_Levels # Modify this line to the correct directory path
         run: Rscript damlevel_scrape.R
       
- # Add new files in data folder, commit along with other modified files, push
+      # Add new files in data folder, commit along with other modified files, push
       - name: Commit files
         run: |
           git config --local user.name actions-user
           git config --local user.email "actions@github.com"
-          git add Greater_Sydney_Dam_Levels/*
+          git add Greater_Sydney_Dam_Levels/* # Modify this line to the correct directory path
           git commit -am "GH ACTION Headlines $(date)"
           git push origin main
         env:
