--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -1,8 +1,7 @@
 name: damlevel_scrape.r
 # Controls when the action will run.
 on:
-    schedule:
-    - cron:  '0 07 * * *'
+   push:
 jobs:
   import-data:
     runs-on: ubuntu-latest
@@ -22,7 +21,9 @@ jobs:
         
       - name: Dam level scraper
         working-directory: Greater_Sydney_Dam_Levels # Modify this line to the correct directory path
-        run: Rscript damlevel_scrape.r
+        run: 
+            Rscript damlevel_scrape.r
+            Rscript  'rmarkdown::render("README.Rmd", output_format = "md_document")'
       
       # Add new files in data folder, commit along with other modified files, push
       - name: Commit files
