--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -33,6 +33,9 @@ jobs:
           git add Greater_Sydney_Dam_Levels/* # Modify this line to the correct directory path
           git commit -am "GH ACTION Headlines $(date)"
           git push origin main
+          git add README.md man/figures/README-*
+          git commit -m "Re-build README.md" || echo "No changes to commit"
+          git push origin master || echo "No changes to commit"
         env:
           REPO_KEY: ${{secrets.GITHUB_TOKEN}}
           username: github-actions
