--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -17,7 +17,12 @@ jobs:
         with:
           packages: |
             any::dplyr
-            any::rvest          
+            any::rvest
+            any::rmarkdown
+            any::ggplot2
+            any::tidyr
+            any::stringr
+            any::zoo
         
       - name: Dam level scraper
         working-directory: Greater_Sydney_Dam_Levels # Modify this line to the correct directory path
