--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -30,7 +30,7 @@ jobs:
             Rscript damlevel_scrape.r
       - name: Render Readme
         run: 
-            Rscript -e 'rmarkdown::render("README.Rmd", output_format = "md_document")'
+            Rscript 'rmarkdown::render("readme.Rmd", output_format = "md_document")'
       # Add new files in data folder, commit along with other modified files, push
       - name: Commit scraper
         run: |
