--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -29,8 +29,9 @@ jobs:
         run: 
             Rscript damlevel_scrape.r
       - name: Render Readme
+        working-directory: Greater_Sydney_Dam_Levels # Modify this line to the correct directory path
         run: 
-            Rscript 'rmarkdown::render("readme.Rmd", output_format = "md_document")'
+            Rscript -e 'rmarkdown::render("readme.Rmd", output_format = "md_document")'
       # Add new files in data folder, commit along with other modified files, push
       - name: Commit scraper
         run: |
