Revert "Fix YAML"
This reverts commit 68b2ee0a2eaa4a85a1351e2cec68649add01f8de, reversing
changes made to 38debfd0bd232da9a2196c2283c916148cf63ecc.

--- a/.github/workflows/greatersydscraper.yml
+++ b/.github/workflows/greatersydscraper.yml
@@ -1,8 +1,7 @@
 name: damlevel_scrape.r
 # Controls when the action will run.
 on:
-    schedule:
-    - cron:  '0 07 * * *'
+    push:
 jobs:
   import-data:
     runs-on: ubuntu-latest
